--- a/about_yamin.html
+++ b/about_yamin.html
@@ -85,7 +85,7 @@
 
     <button class="tablink"
     onclick="openPage('Home', this, 'burlywood')">
-        <a href="welcome.html">Home</a></button>
+        <a href="index.html">Home</a></button>
     
     <button class="tablink"
     onclick="openPage('Explore', this, 'burlywood')">
