--- a/explore.html
+++ b/explore.html
@@ -112,7 +112,7 @@
     onclick="openCity(event,'Resume')" id="defaultOpen">
     Resume</button>
     <button class="tablinks" style="border-color: pink;"
-    onclick="openCity(event,'Home')" id="defaultOpen"><a href="welcome.html">Home</a></button>
+    onclick="openCity(event,'Home')" id="defaultOpen"><a href="index.html">Home</a></button>
     <button class="tablinks" style="border-color: pink;"
     onclick="openCity(event,'About Yamin')" id="defaultOpen"><a href="about_yamin.html">About Yamin</a></button>
 </div>
