--- a/explore.html
+++ b/explore.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <h1
     style="text-align:center" >Engineering Projects and Experiences</h1>
     <meta name  ="viewpoint"
