--- a/about_yamin.html
+++ b/about_yamin.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <h1
     style="text-align:center" >Who is Yamin Y?</h1>
     <p style="text-align: center; font-size:small; font-family:'Times New Roman';">***********  Please Click on Menu Tabs to Explore *********** </p>
