--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <h1
     style="text-align:center" ><a style="color: rgb(94, 9, 34);font-family: Georgia;"
     >Welcome from YY's Website
