--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <title>Yamin Yee</title>
 </head>
 <body style="background-image: url(background.jpg);background-repeat: no-repeat;
-             background-size: cover;">
+             background-size: auto;">
     <img src="y.PNG" 
     class="center"
     top: 50%;
